# davis-ellwood-rust

./: Cargo.toml  README.md  Trunk.toml
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
frontend/src/common/: header.rs  mod.rs  not_found.rs
frontend/src/pages/: home.rs  mod.rs
frontend/src/pages/work/: mod.rs  work_home.rs  work_page.rs
frontend/static/header/: dellwood-header.css
frontend/static/work/migratetobackend/: oldViewsData.py
model/: Cargo.toml
model/src/work/: feature_item.rs  mod.rs  work_item.rs
server/: Cargo.toml
server/src/: main.rs
server/src/api/: api_router.rs  mod.rs
server/src/api/work/: all_work.rs  mod.rs
