[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.4.0", features = ["serde"] }
console_error_panic_hook = "0.1.7"
gloo-net = "0.4.0"
yew = { version = "0.20.0", features=["hydration"] }
yew-router = "0.17.0"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
log = "0.4.20"
yew-bootstrap = { path = "../../yew-bootstrap/packages/yew-bootstrap" }
web-sys = { version = "0.3.64", features = ["HtmlAreaElement", "HtmlSelectElement"] }
wasm-bindgen = "0.2.87"
gloo-utils = "0.2.0"
yew-hooks = "0.2.0"
model = { path = "../model" }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = "z"
lto = true