[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.0", features = ["derive"] }
log = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
frontend = { path = "../frontend" }
yew = { version = "0.20.0", features = ["ssr"] }
futures = "0.3.28"
bytes = "1.4.0"
hyper = "0.14.27"
